# GimpFormats

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCS.md  NOTES.txt  README.md  base24copy.xcf  catXCF.py  gimp-wilber.xcf  gitit.py  pyproject.toml  requirements.txt  requirements_optional.txt  setup.py  test.py  test_mask.py  wilber.xcf  xcfSpec.txt
.github/workflows/: mirror-to-codeberg.yaml
DOCS/: README.md
DOCS/gimpformats/: GimpChannel.md  GimpGbrBrush.md  GimpGgrGradient.md  GimpGihBrushSet.md  GimpGpbBrush.md  GimpGplPalette.md  GimpGtpToolPreset.md  GimpIOBase.md  GimpImageHierarchy.md  GimpImageLevel.md  GimpLayer.md  GimpParasites.md  GimpPatPattern.md  GimpPrecision.md  GimpVbrBrush.md  GimpVectors.md  gimpXcfDocument.md  index.md  utils.md
documentation/reference/: MODULES.md  README.md
documentation/reference/gimpformats/: GimpChannel.md  GimpGbrBrush.md  GimpGgrGradient.md  GimpGihBrushSet.md  GimpGpbBrush.md  GimpGplPalette.md  GimpGtpToolPreset.md  GimpIOBase.md  GimpImageHierarchy.md  GimpImageLevel.md  GimpLayer.md  GimpParasites.md  GimpPatPattern.md  GimpPrecision.md  GimpVbrBrush.md  GimpVectors.md  binaryiotools.md  enums.md  gimpXcfDocument.md  index.md  native_convert.md  utils.md
documentation/reference/test_informal/: index.md  masktest.md  simpletest.md  test64x64.md  test_gimp_document.md  test_native_convert.md
gimpformats/: BinaryIO.py  GimpChannel.py  GimpGbrBrush.py  GimpGgrGradient.py  GimpGihBrushSet.py  GimpGpbBrush.py  GimpGplPalette.py  GimpGtpToolPreset.py  GimpIOBase.py  GimpImageHierarchy.py  GimpImageLevel.py  GimpLayer.py  GimpParasites.py  GimpPatPattern.py  GimpPrecision.py  GimpVbrBrush.py  GimpVectors.py  __init__.py  binaryIO.py  binaryiotools.py  enums.py  gimpGbrBrush.py  gimpGgrGradient.py  gimpGpbBrush.py  gimpGplPalette.py  gimpIOBase.py  gimpImageInternals.py  gimpParasites.py  gimpPatPattern.py  gimpVbrBrush.py  gimpXcfDocument.py  native_convert.py  utils.py
gimpformats_unofficial/: __init__.py  binaryIO.py  gimpFormat.py  gimpGbrBrush.py  gimpGgrGradient.py  gimpGihBrushSet.py  gimpGpbBrush.py  gimpGplPalette.py  gimpGtpToolPreset.py  gimpIOBase.py  gimpImageInternals.py  gimpParasites.py  gimpPatPattern.py  gimpVbrBrush.py  gimpVectors.py  gimpXcfDocument.py
test/: test.py
test/gbrBrush/: test.py
test/gbr_brush/: test.py
test/ggrGradient/: test.py
test/ggr_gradient/: test.py
test/gihBrushSet/: test.py
test/gih_brush_set/: test.py
test/gplPalette/: test.py
test/gpl_palette/: test.py
test/group_masks/: __init__.py  group-mask-test.tga  group-mask-test.xcf  single-masked-group.tga  single-masked-group.xcf  test.py
test/gtpToolPreset/: test.py
test/gtp_tool_preset/: test.py
test/patPattern/: test.py
test/pat_pattern/: test.py
test/simpleXcfRead/: test.py
test/simple_xcf_read/: test.py
test/vbrBrush/: test.py
test/vbr_brush/: test.py
test_files/: 64x64.xcf  64x64_copy.xcf  base24copy.xcf  test.xcf  xcf_mask_test.xcf
test_informal/: masktest.py  simpletest.py  test64x64.py  test_64x64.py  test_gimp_document.py  test_native_convert.py
tests/exported_paths/: README.txt
tests/gbr_brush/: test_gbr_brush.py
tests/ggr_gradient/: test_ggr_gradient.py
tests/gih_brush_set/: test_gih_brush_set.py
tests/gimp_layer/: case1.txt  test_gimp_layer.py
tests/gpl_palette/: plasma.gpl  test_gpl_palette.py  web.gpl
tests/group_masks/: multiple-masked-groups.tga  multiple-masked-groups.xcf  test_group_masks.py
tests/gtp_tool_preset/: test_gtp_tool_preset.py
tests/image_hierarchy/: test.xcf.txt  test_image_hierarchy.py
tests/image_level/: test_image_level.py
tests/image_level/dest/: test.xcf.decoded.txt
tests/pat_pattern/: test_pat_pattern.py
tests/simple_xcf_read/: testComplexImage.txt  testOneLayerWithTransparency.txt  test_simple_xcf_read.py
tests/simple_xcf_read/dest/: issue_14.txt  testComplexImage.txt  testOneLayerWithTransparency.txt
tests/vbr_brush/: actualOutput_Diagonal-Star-17.vbr  test_vbr_brush.py
tests/with_paths/: test_xcf_document.py  with_paths.txt
tests/xcf_document/: test_perf.py  test_xcf_document.py
tests/xcf_document/dest/: issue_14.txt  layer_comp_modes.txt  layer_groups.txt  testComplexImage.txt  testOneLayerWithTransparency.txt
tests/xcf_document/rods-custom-font-xcf-files/: README.md
tests/xcf_document/src/: issue_14.xcf  layer_comp_modes.xcf
